--- a/_sass/_reset.scss
+++ b/_sass/_reset.scss
@@ -23,6 +23,14 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
+
+
+
+h7, name { 
+	font-family: LifehackBasic-Regular; 
+	font-weight: normal; 
+	font-style: normal; 
+}
 // HTML5 display-role reset for older browsers
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
