--- a/_sass/_reset.scss
+++ b/_sass/_reset.scss
@@ -31,12 +31,23 @@ h7, name {
 	font-weight: normal; 
 	font-style: normal; 
 }
+h1, h2, h3, h4, h5, h6 {
+  line-height: 1.3; }
+
 // HTML5 display-role reset for older browsers
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
+	 font-family: Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  line-height: 1.8;
+  font-weight: 300;
+  color: #111;
+  background-color: #fdfdfd;
+  -webkit-text-size-adjust: 100%; }
+
 	line-height: 1;
 }
 ol, ul {
