--- a/_sass/_reset.scss
+++ b/_sass/_reset.scss
@@ -1,7 +1,7 @@
 
 /***************/
 /* MEYER RESET */
-/***************/
+/**************
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -24,7 +24,7 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 
-
+*/
 
 h7, name { 
 	font-family: LifehackBasic-Regular; 
