--- a/_sass/_reset.scss
+++ b/_sass/_reset.scss
@@ -4,7 +4,7 @@
 /***************/
 
 html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+h1, h2, h3, h4, h5, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
@@ -26,7 +26,7 @@ time, mark, audio, video {
 
 
 
-h7, name { 
+h6, { 
 	font-family: LifehackBasic-Regular; 
 	font-weight: normal; 
 	font-style: normal; 
