--- a/_sass/_reset.scss
+++ b/_sass/_reset.scss
@@ -40,7 +40,7 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
-	 font-family: Helvetica, Arial, sans-serif;
+	 font-family: LifehackBasic-Regular;
   font-size: 16px;
   line-height: 1.8;
   font-weight: 300;
